curso_3/cuatrimestre_2/LdP/yacc/yacc_lab_2/y.output
Gramática

    0 $accept: phrase $end

    1 phrase: cart_animal CART
    2       | work_animal PLOW

    3 cart_animal: HORSE AND
    4            | GOAT AND

    5 work_animal: HORSE AND
    6            | OX AND


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    CART (258) 1
    PLOW (259) 2
    AND (260) 3 4 5 6
    HORSE (261) 3 5
    GOAT (262) 4
    OX (263) 6


No terminales con las reglas donde aparecen

    $accept (9)
        on left: 0
    phrase (10)
        on left: 1 2
        on right: 0
    cart_animal (11)
        on left: 3 4
        on right: 1
    work_animal (12)
        on left: 5 6
        on right: 2


Estado 0

    0 $accept: . phrase $end

    HORSE  desplazar e ir al estado 1
    GOAT   desplazar e ir al estado 2
    OX     desplazar e ir al estado 3

    phrase       ir al estado 4
    cart_animal  ir al estado 5
    work_animal  ir al estado 6


Estado 1

    3 cart_animal: HORSE . AND
    5 work_animal: HORSE . AND

    AND  desplazar e ir al estado 7


Estado 2

    4 cart_animal: GOAT . AND

    AND  desplazar e ir al estado 8


Estado 3

    6 work_animal: OX . AND

    AND  desplazar e ir al estado 9


Estado 4

    0 $accept: phrase . $end

    $end  desplazar e ir al estado 10


Estado 5

    1 phrase: cart_animal . CART

    CART  desplazar e ir al estado 11


Estado 6

    2 phrase: work_animal . PLOW

    PLOW  desplazar e ir al estado 12


Estado 7

    3 cart_animal: HORSE AND .
    5 work_animal: HORSE AND .

    PLOW      reduce usando la regla 5 (work_animal)
    $default  reduce usando la regla 3 (cart_animal)


Estado 8

    4 cart_animal: GOAT AND .

    $default  reduce usando la regla 4 (cart_animal)


Estado 9

    6 work_animal: OX AND .

    $default  reduce usando la regla 6 (work_animal)


Estado 10

    0 $accept: phrase $end .

    $default  aceptar


Estado 11

    1 phrase: cart_animal CART .

    $default  reduce usando la regla 1 (phrase)


Estado 12

    2 phrase: work_animal PLOW .

    $default  reduce usando la regla 2 (phrase)
